# tenant-shard-db

./: .gitignore  .schema-snapshot.json  ARCHITECTURE.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.schema  Makefile  README.md  SECURITY.md  buf.gen.yaml  buf.yaml  demo.py  demo.sh  docker-compose.yml  pyproject.toml  test_demo.py
.benchmarks/go/: 20260512T140706Z_host_macos_arm64.json  20260512T140837Z_docker_constrained.json
.benchmarks/python/: 20260512T140706Z_host_macos_arm64.json  20260512T140837Z_docker_constrained.json
.claude/commands/: architect.md  audit-all.md  audit-ccpa.md  audit-gdpr.md  audit-hipaa.md  audit-iso27001.md  audit-soc2.md  backend-deploy.md  backend-dev.md  backend-docker.md  backend-ship.md  blocked.md  console-deploy.md  console-dev.md  console-docker.md  console-ship.md  contract.md  cron.md  datagen.md  feature.md  issue.md  playwright.md  pr.md  resolve.md  review.md  run.md  simplify.md  split.md  team-lead.md
.github/: dependabot.yml
console/: Dockerfile  README.md  docker-compose.yml  requirements.txt
docs/: COMPLIANCE-ROADMAP.md  README.md  api-reference.md  deployment.md  durability.md  getting-started.md  migration-v2.md  onboarding.md  operations.md  schema-evolution.md  sdk-reference.md
docs-site/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.mjs
examples/: README.md  _harness.py  acl_sharing.py  example_schema.proto  example_schema_pb2.py  graph_edges.py  quickstart.py  read_after_write.py  test_examples.py
playground/: __init__.py  app.py  codegen.py  config.py  requirements.txt  routes.py  schema.proto  schema.py  schema_format.py
scripts/: check_docs_coverage.py  collect_soc2_evidence.py  generate_api_docs.py  generate_proto.sh
sdk/: README.md  pyproject.toml
sdk/entdb_sdk/: __init__.py  _grpc_client.py  _redirect_cache.py  cli.py  client.py  codegen.py  errors.py  keys.py  lint.py  registry.py  schema.py  scope.py  typed.py  validate.py
sdk/entdb_sdk/_generated/: __init__.py  entdb_options_pb2.py  entdb_pb2.py  entdb_pb2_grpc.py
sdk/entdb_sdk/proto/: entdb_options.proto
sdk/go/entdb/: .gitignore  .goreleaser.yaml  LICENSE  README.md  acid_test.go  admin.go  admin_gdpr_test.go  admin_test.go  buf.gen.yaml  client.go  client_test.go  composite_unique_test.go  errors.go  errors_test.go  filter.go  filter_test.go  filter_where_test.go  go.mod  go.sum  grpc_transport_test.go  insert_if_not_exists.go  insert_if_not_exists_test.go  integration_test.go  keys.go  mailbox_reads_test.go  marshal.go  offsets.go  offsets_test.go  options.go  payload_roundtrip_test.go  plan.go  plan_test.go  plan_updatefields_test.go  redirect_cache.go  redirect_cache_test.go  resolver.go  resolver_test.go  retry.go  retry_test.go  schema_extract.go  (+11 more)
sdk/go/entdb/cmd/entdb/: main.go  main_test.go  snapshot_test.go  version.go
sdk/go/entdb/cmd/entdb-console/: README.md  embed.go  errors.go  main.go  server.go  server_test.go  spa.go  spa_test.go  upstream.go  upstream_stub.go
sdk/go/entdb/cmd/entdb-console/frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
sdk/go/entdb/cmd/entdb-console/frontend/src/: App.tsx  api.ts  env.ts  index.css  main.tsx
sdk/go/entdb/cmd/entdb-console/frontend/src/components/: Layout.tsx  SettingsDialog.tsx
sdk/go/entdb/cmd/entdb-console/frontend/src/components/ui/: button.tsx  dialog.tsx  index.ts  theme-provider.tsx
sdk/go/entdb/cmd/entdb-console/frontend/src/pages/: GraphPage.tsx  NodeDetailPage.tsx  NodesPage.tsx  SandboxPage.tsx  SchemaPage.tsx  SearchPage.tsx  TenantDetailPage.tsx  TenantsPage.tsx
sdk/go/entdb/cmd/entdb-console/frontend/src/types/: refraction-ui.d.ts
sdk/go/entdb/cmd/entdbctl/: README.md  client.go  cmd_edges.go  cmd_edges_test.go  cmd_graph.go  cmd_graph_test.go  cmd_health.go  cmd_health_test.go  cmd_nodes.go  cmd_nodes_test.go  cmd_schema.go  cmd_schema_test.go  cmd_search.go  cmd_search_test.go  cmd_tenants.go  cmd_tenants_test.go  format.go  main.go  main_test.go  testutil_test.go
sdk/go/entdb/internal/console/v1/: console.pb.go
sdk/go/entdb/internal/console/v1/consolev1connect/: console.connect.go
sdk/go/entdb/internal/pb/: entdb.pb.go  entdb_grpc.pb.go  generate.go
sdk/go/entdb/internal/testpb/: testpb.go
sdk/python/: LICENSE  README.md  pyproject.toml
sdk/python/entdb_sdk/: __init__.py  _grpc_client.py  _redirect_cache.py  _tracing.py  _version.py  cli.py  client.py  codegen.py  errors.py  filter.py  keys.py  registry.py  schema.py  scope.py  typed.py  validate.py
sdk/python/entdb_sdk/_generated/: __init__.py  entdb_pb2.py  entdb_pb2_grpc.py
sdk/python/entdb_sdk/proto/: entdb_options.proto
server/python/: README.md  pyproject.toml
server/python/entdb_server/: __init__.py  config.py  data_policy.py  encryption.py  gdpr_worker.py  global_store.py  healthcheck.py  tracing.py
server/python/entdb_server/api/: admin_handlers.py  auth.py  grpc_server.py  jwt_auth.py
server/python/entdb_server/apply/: __init__.py  acl.py  applier.py
server/python/entdb_server/archive/: __init__.py  archiver.py
server/python/entdb_server/audit/: __init__.py  compliance.py  s3_lock.py
server/python/entdb_server/auth/: __init__.py  api_key_manager.py  capability_registry.py  oauth_validator.py  quota_interceptor.py
server/python/entdb_server/crypto/: __init__.py  crypto_shred.py  encrypted_connection.py
server/python/entdb_server/diagrams/: architecture.mmd  data-model.mmd  read-path.mmd  recovery-flow.mmd  schema-evolution.mmd  write-path.mmd
server/python/entdb_server/schema/: field_id_translation.py  registry.py  types.py
server/python/entdb_server/storage/: __init__.py  azure_blob.py  local_fs.py  s3.py
server/python/entdb_server/tools/: recovery_strategy.py  restore.py  schema_cli.py
server/python/entdb_server/wal/: __init__.py  base.py  pubsub.py  servicebus.py
terraform/: ecs.tf  iam.tf  kinesis.tf  main.tf  msk.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf  vpc.tf
tests/: __init__.py
(+961 files in other folders)
