[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entdb"
version = "0.5.0"
description = "Tenant-sharded graph database with nodes and edges"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    {name = "EntDB Team", email = "team@entdb.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["database", "graph", "tenant", "sharding", "event-sourcing"]

dependencies = []

[project.optional-dependencies]
server = [
    "aiokafka==0.10.0",
    "aiobotocore==2.11.2",
    "aiohttp==3.9.5",
    "grpcio==1.63.2",
]
pubsub = [
    "google-cloud-pubsub==2.18.4",
]
servicebus = [
    "azure-servicebus==7.11.4",
]
eventhubs = [
    "azure-eventhub==5.11.7",
]
azure-storage = [
    "azure-storage-blob==12.19.1",
]
gcs = [
    "google-cloud-storage==2.14.0",
]
metrics = [
    "prometheus_client==0.21.1",
]
tracing = [
    "opentelemetry-api==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.29.0",
]
sdk = [
    "grpcio==1.63.2",
    "protobuf==4.25.3",
]
dev = [
    "entdb[server,sdk]",
    "pytest==8.3.5",
    "pytest-asyncio==0.24.0",
    "pytest-cov==4.1.0",
    "pytest-timeout==2.2.0",
    "ruff==0.15.7",
    "mypy==1.19.1",
    "httpx==0.26.0",
    "grpcio-tools==1.63.2",
]
all = [
    "entdb[server,sdk,metrics,tracing,pubsub,servicebus,eventhubs,azure-storage,gcs,dev]",
]

[project.scripts]
entdb = "dbaas.entdb_server.main:main"
entdb-restore = "dbaas.entdb_server.tools.restore:main"
entdb-schema = "dbaas.entdb_server.tools.schema_cli:main"

[project.urls]
Homepage = "https://github.com/elloloop/tenant-shard-db"
Documentation = "https://github.com/elloloop/tenant-shard-db#readme"
Repository = "https://github.com/elloloop/tenant-shard-db"
Issues = "https://github.com/elloloop/tenant-shard-db/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dbaas*", "sdk*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.proto"]

# =============================================================================
# Ruff (linter)
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*_generated*",
    "*/generated/*",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top of file
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from in except (sometimes intentional)
    "C901",   # too complex
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "SIM102", # nested if (sometimes clearer)
]

[tool.ruff.lint.isort]
known-first-party = ["dbaas", "sdk", "entdb_sdk", "entdb_server"]

# =============================================================================
# Mypy (type checker)
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
strict_optional = true
exclude = [
    "_generated/",
    "api/generated/",
]

[[tool.mypy.overrides]]
module = [
    "aiokafka.*",
    "aiobotocore.*",
    "grpc.*",
    "aiohttp.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "entdb_sdk._generated",
    "entdb_sdk._generated.*",
    "dbaas.entdb_server.api.generated",
    "dbaas.entdb_server.api.generated.*",
]
follow_imports = "skip"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "dbaas.entdb_server.wal.kinesis",
    "dbaas.entdb_server.wal.kafka",
    "dbaas.entdb_server.wal.pubsub",
    "dbaas.entdb_server.wal.sqs",
    "dbaas.entdb_server.wal.servicebus",
    "dbaas.entdb_server.wal.eventhubs",
    "dbaas.entdb_server.tools.restore",
    "dbaas.entdb_server.tools.schema_cli",
    "dbaas.entdb_server.snapshot.snapshotter",
    "dbaas.entdb_server.archive.archiver",
    "dbaas.entdb_server.storage.s3",
    "dbaas.entdb_server.storage.azure_blob",
    "dbaas.entdb_server.storage.gcs",
]
strict_optional = false
warn_return_any = false

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "bench_*.py"]
python_functions = ["test_*", "bench_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require SQLite)",
    "e2e: End-to-end tests (require full stack)",
    "slow: Slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
timeout = 60

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["dbaas", "sdk"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
precision = 2
