[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entdb-sdk"
dynamic = ["version"]
description = "Python SDK for EntDB tenant-sharded graph database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "EntDB Team", email = "team@entdb.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["database", "graph", "tenant", "sharding", "grpc", "entdb"]

dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]

# Optional W3C trace-context propagation (ADR-033 §6). Without this the
# SDK never injects a traceparent; with an active OpenTelemetry span it
# propagates the trace to the server. Install: pip install "entdb-sdk[tracing]".
[project.optional-dependencies]
tracing = [
    "opentelemetry-api>=1.20.0",
]

[project.scripts]
entdb = "entdb_sdk.cli:main"

[project.urls]
Homepage = "https://github.com/elloloop/tenant-shard-db"
Documentation = "https://github.com/elloloop/tenant-shard-db#readme"
Repository = "https://github.com/elloloop/tenant-shard-db"
Issues = "https://github.com/elloloop/tenant-shard-db/issues"

[tool.setuptools.dynamic]
version = {attr = "entdb_sdk._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["entdb_sdk*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.proto"]
